--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:background="@drawable/background"
     tools:context="capstone.conestoga.pizzanpub24.PaymentActivity">
 
@@ -127,7 +128,8 @@
 
         <RadioGroup
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/cardtype">
 
             <RadioButton
                 android:layout_width="wrap_content"
@@ -159,52 +161,69 @@
         android:background="@color/cardview_light_background"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
-        <EditText
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:maxLength="16"
-            android:hint="Card Number"
-            android:id="@+id/editText" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/cardnumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/card_number"
+                android:inputType="number"
+                android:maxLength="16"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/darker_gray" />
+        </android.support.design.widget.TextInputLayout>
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="7"
-                android:maxLength="5"
-                android:hint="MM/YY"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/editText2" />
 
-            <EditText
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="7"
-                android:maxLength="3"
-                android:hint="Security Number"
-                android:id="@+id/editText3" />
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/expdate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/exp_date"
+                    android:inputType="number"
+                    android:maxLength="5"
+                    android:ems="7"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="@android:color/darker_gray" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/secno"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/sec_no"
+                    android:inputType="number"
+                    android:maxLength="5"
+                    android:ems="10"
+                    android:textColor="@android:color/black"
+                    android:textColorHint="@android:color/darker_gray" />
+            </android.support.design.widget.TextInputLayout>
         </TableRow>
     </LinearLayout>
 
     <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Make Payment"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:id="@+id/makepayment"
-        android:layout_below="@+id/linearLayout2"
-        android:onClick="makePayment"
-        android:layout_centerHorizontal="true" />
-
+        android:id="@+id/btn_makepayment"
+        android:textColor="@color/white"
+        android:background="@color/colorAccent1"
+        android:layout_below="@+id/linearLayout2"/>
 
 </RelativeLayout>
