--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -7,6 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="capstone.conestoga.pizzanpub24.MenuActivity"
     tools:showIn="@layout/activity_menu"
+    android:orientation="vertical"
     android:background="@android:color/transparent">
 
     <android.support.v7.widget.RecyclerView
