--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -4,13 +4,12 @@
     android:layout_height="wrap_content"
     android:background="@drawable/list_selector"
     android:orientation="horizontal"
-    android:padding="5dip" >
+    android:padding="@dimen/activity_vertical_margin" >
 
     <!--  ListRow Left sied Thumbnail image -->
     <LinearLayout android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dip"
         android:layout_alignParentLeft="true"
         android:background="@drawable/image_bg"
         android:layout_marginRight="5dip">
@@ -18,6 +17,7 @@
         <ImageView
             android:id="@+id/list_image"
             android:layout_width="50dip"
+            android:scaleType="fitXY"
             android:layout_height="50dip"
             android:src="@drawable/pizzabg"/>
 
@@ -28,45 +28,27 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/thumbnail"
         android:layout_toRightOf="@+id/thumbnail"
-        android:text="Pizza"
+        android:layout_toEndOf="@+id/thumbnail"
+        android:layout_margin="@dimen/album_title_padding"
+        android:text="item"
         android:textColor="#040404"
         android:typeface="sans"
-        android:textSize="15dip"
+        android:textSize="20sp"
         android:textStyle="bold"/>
-
-    <!-- Artist Name -->
-    <TextView
-        android:id="@+id/artist"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:textColor="#343434"
-        android:textSize="10dip"
-        android:layout_marginTop="1dip"
-        android:layout_toRightOf="@+id/thumbnail"
-        android:text="Available Sizes: S, M, L, XL" />
 
     <!-- Rightend Duration -->
     <TextView
-        android:id="@+id/duration"
+        android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/title"
         android:gravity="right"
-        android:text="$11 - $25"
+        android:text="$0"
         android:layout_marginRight="5dip"
-        android:textSize="10dip"
+        android:textSize="12dp"
         android:textColor="#10bcc9"
         android:textStyle="bold"/>
-
-    <!-- Rightend Arrow -->
-    <ImageView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/arrow_down_float"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
