--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_signout"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/btn_sign_out"
+        android:icon="@drawable/ic_logout" />
+    <item
+        android:id="@+id/action_cart"
+        android:orderInCategory="101"
+        android:title="@string/title_activity_cart"
+        android:icon="@drawable/ic_cart" />
 </menu>
