--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,5 +25,6 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 
-    <dimen name="logo_w_h">100dp</dimen>
+    <dimen name="logo_w">200dp</dimen>
+    <dimen name="logo_h">100dp</dimen>
 </resources>
